[package]
name = "yew-bulma"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
description = "Components based on the bulma css library for projects using the yew front-end web development framework."
readme = "README.md"
license = "MIT"
keywords = ["yew", "wasm", "bulma", "css"]
categories = ["gui", "wasm", "web-programming", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
yewtil = { git = "https://github.com/yewstack/yew.git", default-features = false, features = ["neq"] }
web-sys = { version = "0.3", features = ["Request"] }
form-validation = { version = "0.1", git = "https://github.com/kellpossible/form-validation.git" }