[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["gui", "wasm", "web-programming", "api-bindings"]
description = "Components based on the bulma css library for projects using the yew front-end web development framework."
edition = "2018"
keywords = ["yew", "wasm", "bulma", "css"]
license = "MIT"
name = "yew-bulma"
readme = "README.md"
repository = "https://github.com/kellpossible/yew-bulma"
version = "0.1.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
form-validation = { version = "0.2", features = ["wasm-bindgen-support", "async"] }
web-sys = { version = "0.3", features = ["Request"] }
yew = "0.17"
yewtil = { version = "0.3", default-features = false, features = ["neq", "future"] }
wasm-bindgen = "0.2"
log = "0.4"